sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:32: error: ';' expected but '[' found.
  Pour tout i dans [debut,fin], faire:
                   ^AlgCocktailSort2:35: error: ';' expected but '[' found.
  Pour tout i dans [fin, debut] en descendant, faire:
                   ^AlgCocktailSort2:38: error: ';' expected but symbol literal found.
tant qu'au moins l'un des parcours a inversé un élément 
                  ^